# climon

./: README.md  main.py  pyproject.toml
.github/workflows/: build.yml
core/: printer.py  uri.py  validators.py
mongoeb/: config_file.py  main.py
mongoeb/cli/: commands.py
mongoeb/cli/graph/: graph_commands.py
mongoeb/cli/visual/: browsing.py
mongoeb/cli/visualize/: browsing.py
mongoeb/core/: config.py  db.py  params.py  printer.py  uri.py  validators.py
mongoeb/core/graph/: build_graph.py  build_tree.py
mongoeb/core/services/: document_finder.py  helpers.py  query_builder.py
mongoeb/core/visualize/: field_extraction.py  html_builders.py  type_detection.py
mongoeb/setup/: run_setup.py
mongoeb/shell/: command_executor.py  eboshell.py
