[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongoeb"
version = "0.1.0"
description ="CLI Mongo thingamajig"
dependencies = [
    "typer",
    "rich",
    "pymongo",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
mongoeb = "mongoeb.main:main"